# deejay-cog

./: .env.example  .releaserc.json  CHANGELOG.md  README.md  evaluator.yaml  prefect.yaml  pyproject.toml
.github/workflows/: ci.yml  generate_summaries.yml  manual-version-bump.yml  process_new_csv_files.yml  test-and-version.yml  update_dj_set_collection.yml  update_live_history.yml
docs/: CONFIGURATION.md  PIPELINE.md  PREFECT.md
scripts/: migrate_historical_sets.py
src/deejay_cog/: _pipeline_eval.py  config.py  deduplicate_summary.py  generate_summaries.py  ingest_live_history.py  ingest_to_api.py  main.py  process_new_files.py  retag_music.py  update_deejay_set_collection.py
src/deejay_set_processor/: deduplicate_summary.py  evaluation_webhook.py  generate_summaries.py  ingest_live_history.py  ingest_to_api.py  pipeline_evaluator.py  process_new_files.py  spotify_sync.py  update_deejay_set_collection.py
tests/deejay_cog/: test_ingest_live_history.py  test_pipeline_eval_helpers.py  test_process_new_files.py  test_retag_music.py  test_update_deejay_set_collection.py
tests/deejay_set_processor/: test_evaluation_webhook.py  test_ingest_live_history.py  test_ingest_to_api.py  test_process_new_files.py  test_spotify_sync.py
