[project]
name = "deejay-set-processor"
version = "0.0.75"
description = "Processes DJ set CSV files from Google Drive into Google Sheets and JSON for kaiano-api."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "kaiano",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
kaiano = { git = "https://github.com/kaianolevine/kaiano-common-utils.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deejay_set_processor"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in handlers)
]

[tool.ruff.lint.isort]
known-first-party = ["deejay_set_processor"]

[tool.ruff.format]
quote-style = "double"
