[project]
name = "deejay-set-processor"
version = "1.5.0"
description = "Processes DJ set CSV files from Google Drive into Google Sheets and JSON for kaiano-api."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "kaiano",
    "prefect>=3.0,<4.0",
    "evaluator-cog",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
kaiano = { git = "https://github.com/kaianolevine/kaiano-common-utils.git", rev = "main" }
evaluator-cog = { git = "https://github.com/kaianolevine/evaluator-cog.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deejay_set_processor"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "ARG001",
]

[tool.ruff.lint.isort]
known-first-party = ["deejay_set_processor"]

[tool.ruff.format]
quote-style = "double"
